// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlogPost Template page > formatDiv renders correctly - inline code block 1`] = `
<div>
  <code>
    <code
      class="language-text"
    >
      test
    </code>
  </code>
</div>
`;

exports[`BlogPost Template page > formatDiv renders correctly 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`BlogPost Template page > renders correctly - featured image 1`] = `
<main>
  <div
    class="pt-48 pb-12"
  >
    <div
      class="mx-auto max-w-[832px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch h-52 flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch h-32 flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              News article
            </div>
          </div>
          <h1
            class="self-stretch text-center text-white   text-[36px] lg:text-[48px] leading-[122.222%] lg:leading-[116.667%] font-semibold"
          >
            MDX Page title
          </h1>
        </div>
        <div
          class="self-stretch text-center text-grey text-grey-300 text-xl font-normal leading-7"
        >
          MDX Page excerpt
        </div>
        <div
          class="flex justify-center items-center gap-5"
        >
          <img
            alt="Adoptium PMC"
            image="[object Object]"
            stlye="[object Object]"
            style="margin-left: 0.5rem; margin-bottom: 0px; min-width: 30px; border-radius: 100%;"
          />
          <span
            class="text-[16px] font-bold leading-[150%] text-white"
          >
            <a
              href="/blog/author/pmc"
            >
              <span
                class="text-primary pr-2"
              >
                Adoptium PMC
                ,
              </span>
               
              2021-01-01
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="mx-auto w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="max-w-4xl"
    >
      <article>
        <header
          class="pb-5"
        >
          <button
            aria-label="x"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#000000"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M 41.116 18.375 h 4.962 l -10.8405 12.39 l 12.753 16.86 H 38.005 l -7.821 -10.2255 L 21.235 47.625 H 16.27 l 11.595 -13.2525 L 15.631 18.375 H 25.87 l 7.0695 9.3465 z m -1.7415 26.28 h 2.7495 L 24.376 21.189 H 21.4255 z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="linkedin"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#0077B5"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="facebook"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#0965FE"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="reddit"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#FF5700"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M 53.34375 32 C 53.277344 30.160156 52.136719 28.53125 50.429688 27.839844 C 48.722656 27.148438 46.769531 27.523438 45.441406 28.800781 C 41.800781 26.324219 37.519531 24.957031 33.121094 24.863281 L 35.199219 14.878906 L 42.046875 16.320312 C 42.214844 17.882812 43.496094 19.09375 45.066406 19.171875 C 46.636719 19.253906 48.03125 18.183594 48.359375 16.644531 C 48.6875 15.105469 47.847656 13.558594 46.382812 12.992188 C 44.914062 12.425781 43.253906 13.007812 42.464844 14.367188 L 34.625 12.800781 C 34.363281 12.742188 34.09375 12.792969 33.871094 12.9375 C 33.648438 13.082031 33.492188 13.308594 33.441406 13.566406 L 31.070312 24.671875 C 26.617188 24.738281 22.277344 26.105469 18.59375 28.609375 C 17.242188 27.339844 15.273438 26.988281 13.570312 27.707031 C 11.863281 28.429688 10.746094 30.089844 10.71875 31.941406 C 10.691406 33.789062 11.757812 35.484375 13.441406 36.257812 C 13.402344 36.726562 13.402344 37.195312 13.441406 37.664062 C 13.441406 44.832031 21.792969 50.65625 32.097656 50.65625 C 42.398438 50.65625 50.753906 44.832031 50.753906 37.664062 C 50.789062 37.195312 50.789062 36.726562 50.753906 36.257812 C 52.363281 35.453125 53.371094 33.800781 53.34375 32 Z M 21.34375 35.199219 C 21.34375 33.433594 22.777344 32 24.542969 32 C 26.3125 32 27.742188 33.433594 27.742188 35.199219 C 27.742188 36.96875 26.3125 38.398438 24.542969 38.398438 C 22.777344 38.398438 21.34375 36.96875 21.34375 35.199219 Z M 39.9375 44 C 37.664062 45.710938 34.871094 46.582031 32.03125 46.464844 C 29.191406 46.582031 26.398438 45.710938 24.128906 44 C 23.847656 43.65625 23.871094 43.15625 24.183594 42.839844 C 24.5 42.527344 25 42.503906 25.34375 42.785156 C 27.269531 44.195312 29.617188 44.90625 32 44.800781 C 34.386719 44.929688 36.746094 44.242188 38.6875 42.847656 C 39.042969 42.503906 39.605469 42.511719 39.953125 42.863281 C 40.296875 43.21875 40.289062 43.785156 39.9375 44.128906 Z M 39.359375 38.527344 C 37.59375 38.527344 36.160156 37.09375 36.160156 35.328125 C 36.160156 33.5625 37.59375 32.128906 39.359375 32.128906 C 41.128906 32.128906 42.558594 33.5625 42.558594 35.328125 C 42.59375 36.203125 42.269531 37.054688 41.65625 37.6875 C 41.046875 38.316406 40.203125 38.664062 39.328125 38.65625 Z M 39.359375 38.527344"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="email"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#7f7f7f"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M17,22v20h30V22H17z M41.1,25L32,32.1L22.9,25H41.1z M20,39V26.6l12,9.3l12-9.3V39H20z"
                fill="white"
              />
            </svg>
          </button>
        </header>
        <article
          class="prose prose-invert lg:prose-lg max-w-none"
        >
          sample blog
        </article>
        <div
          class="hidden md:flex justify-between items-center gap-10 py-10"
        >
          <div
            class="bg-[#3E3355] w-full h-[1px] "
          />
          <div
            class="flex flex-col items-center"
          >
            <p
              class="tab-button-text"
            >
              Share this post
            </p>
            <div
              class="flex items-center gap-4"
            >
              <button
                class="bg-primary px-6 py-3 rounded-[80px] tab-button-text flex items-center gap-3"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 21 20"
                  width="21"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.5 6.66675C16.8807 6.66675 18 5.54746 18 4.16675C18 2.78604 16.8807 1.66675 15.5 1.66675C14.1193 1.66675 13 2.78604 13 4.16675C13 5.54746 14.1193 6.66675 15.5 6.66675Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M5.5 12.5C6.88071 12.5 8 11.3807 8 10C8 8.61929 6.88071 7.5 5.5 7.5C4.11929 7.5 3 8.61929 3 10C3 11.3807 4.11929 12.5 5.5 12.5Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M15.5 18.3335C16.8807 18.3335 18 17.2142 18 15.8335C18 14.4528 16.8807 13.3335 15.5 13.3335C14.1193 13.3335 13 14.4528 13 15.8335C13 17.2142 14.1193 18.3335 15.5 18.3335Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M7.65625 11.2583L13.3479 14.575"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M13.3396 5.42505L7.65625 8.74172"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
                Share
              </button>
              <a
                aria-label="Share on FB"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_501_4312)"
                  >
                    <path
                      d="M24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 17.9895 4.3882 22.954 10.125 23.8542V15.4688H7.07812V12H10.125V9.35625C10.125 6.34875 11.9166 4.6875 14.6576 4.6875C15.9701 4.6875 17.3438 4.92188 17.3438 4.92188V7.875H15.8306C14.34 7.875 13.875 8.80008 13.875 9.75V12H17.2031L16.6711 15.4688H13.875V23.8542C19.6118 22.954 24 17.9895 24 12Z"
                      fill="white"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_501_4312"
                    >
                      <rect
                        fill="white"
                        height="24"
                        width="24"
                      />
                    </clippath>
                  </defs>
                </svg>
              </a>
              <a
                aria-label="Share on X"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.3263 1.90381H21.6998L14.3297 10.3273L23 21.7898H16.2112L10.894 14.8378L4.80995 21.7898H1.43443L9.31743 12.7799L1 1.90381H7.96111L12.7674 8.25814L18.3263 1.90381ZM17.1423 19.7706H19.0116L6.94539 3.81694H4.93946L17.1423 19.7706Z"
                    fill="white"
                  />
                </svg>
              </a>
              <a
                aria-label="Share on GitHub"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_501_4316)"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.0099 0C5.36875 0 0 5.40833 0 12.0992C0 17.4475 3.43994 21.9748 8.21205 23.5771C8.80869 23.6976 9.02724 23.3168 9.02724 22.9965C9.02724 22.716 9.00757 21.7545 9.00757 20.7527C5.6667 21.474 4.97099 19.3104 4.97099 19.3104C4.43409 17.9082 3.63858 17.5478 3.63858 17.5478C2.54511 16.8066 3.71823 16.8066 3.71823 16.8066C4.93117 16.8868 5.56763 18.0486 5.56763 18.0486C6.64118 19.8913 8.37111 19.3707 9.06706 19.0501C9.16638 18.2688 9.48473 17.728 9.82275 17.4276C7.15817 17.1471 4.35469 16.1055 4.35469 11.458C4.35469 10.1359 4.8316 9.05428 5.58729 8.21304C5.46807 7.91263 5.0504 6.67043 5.70677 5.00787C5.70677 5.00787 6.72083 4.6873 9.00732 6.24981C9.98625 5.98497 10.9958 5.85024 12.0099 5.84911C13.024 5.84911 14.0577 5.98948 15.0123 6.24981C17.299 4.6873 18.3131 5.00787 18.3131 5.00787C18.9695 6.67043 18.5515 7.91263 18.4323 8.21304C19.2079 9.05428 19.6652 10.1359 19.6652 11.458C19.6652 16.1055 16.8617 17.1269 14.1772 17.4276C14.6148 17.8081 14.9924 18.5292 14.9924 19.6711C14.9924 21.2936 14.9727 22.5957 14.9727 22.9962C14.9727 23.3168 15.1915 23.6976 15.7879 23.5774C20.56 21.9745 23.9999 17.4475 23.9999 12.0992C24.0196 5.40833 18.6312 0 12.0099 0Z"
                      fill="white"
                      fill-rule="evenodd"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_501_4316"
                    >
                      <rect
                        fill="white"
                        height="24"
                        width="24"
                      />
                    </clippath>
                  </defs>
                </svg>
              </a>
            </div>
          </div>
          <div
            class="bg-[#3E3355] w-full h-[1px] inline-block"
          />
        </div>
      </article>
      <div>
        <ul
          class="flex flex-wrap justify-between list-none p-0"
        >
          <li>
            <a
              href="/blog/next"
              rel="next"
            >
              ← 
              Next
            </a>
          </li>
          <li>
            <a
              href="/blog/previous"
              rel="prev"
            >
              Previous
               →
            </a>
          </li>
        </ul>
      </div>
    </div>
  </section>
  <div
    class="max-w-[1264px] px-6 mx-auto py-8 md:py-16"
  >
    <div
      class="max-w-[670px] mx-auto flex flex-col items-center justify-center"
    >
      <div
        class="text-5xl leading-[116%] text-white text-center font-semibold"
      >
        Related Articles
      </div>
      <div
        class="text-lightgrey mt-6 tab-button-text text-center"
      >
        Eclipse Temurin offers high-performance, cross-platform, open-source Java runtime binaries that are enterprise-ready and Java SE TCK-tested for general use in the Java ecosystem.
      </div>
      <button
        class="rounded-2xl bg-transparent gradient-border mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[160px] h-[48px] block "
      >
        See all articles
      </button>
    </div>
    <div
      class="flex justify-center flex-wrap items-center gap-5 pt-16"
    >
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 1
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 2
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 3
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 4
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
    </div>
  </div>
</main>
`;

exports[`BlogPost Template page > renders correctly 1`] = `
<main>
  <div
    class="pt-48 pb-12"
  >
    <div
      class="mx-auto max-w-[832px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch h-52 flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch h-32 flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              News article
            </div>
          </div>
          <h1
            class="self-stretch text-center text-white   text-[36px] lg:text-[48px] leading-[122.222%] lg:leading-[116.667%] font-semibold"
          >
            MDX Page title
          </h1>
        </div>
        <div
          class="self-stretch text-center text-grey text-grey-300 text-xl font-normal leading-7"
        >
          MDX Page excerpt
        </div>
        <div
          class="flex justify-center items-center gap-5"
        >
          <img
            alt="Adoptium PMC"
            image="[object Object]"
            stlye="[object Object]"
            style="margin-left: 0.5rem; margin-bottom: 0px; min-width: 30px; border-radius: 100%;"
          />
          <span
            class="text-[16px] font-bold leading-[150%] text-white"
          >
            <a
              href="/blog/author/pmc"
            >
              <span
                class="text-primary pr-2"
              >
                Adoptium PMC
                ,
              </span>
               
              2021-01-01
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="mx-auto w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="max-w-4xl"
    >
      <article>
        <header
          class="pb-5"
        >
          <button
            aria-label="x"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#000000"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M 41.116 18.375 h 4.962 l -10.8405 12.39 l 12.753 16.86 H 38.005 l -7.821 -10.2255 L 21.235 47.625 H 16.27 l 11.595 -13.2525 L 15.631 18.375 H 25.87 l 7.0695 9.3465 z m -1.7415 26.28 h 2.7495 L 24.376 21.189 H 21.4255 z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="linkedin"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#0077B5"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="facebook"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#0965FE"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="reddit"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#FF5700"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M 53.34375 32 C 53.277344 30.160156 52.136719 28.53125 50.429688 27.839844 C 48.722656 27.148438 46.769531 27.523438 45.441406 28.800781 C 41.800781 26.324219 37.519531 24.957031 33.121094 24.863281 L 35.199219 14.878906 L 42.046875 16.320312 C 42.214844 17.882812 43.496094 19.09375 45.066406 19.171875 C 46.636719 19.253906 48.03125 18.183594 48.359375 16.644531 C 48.6875 15.105469 47.847656 13.558594 46.382812 12.992188 C 44.914062 12.425781 43.253906 13.007812 42.464844 14.367188 L 34.625 12.800781 C 34.363281 12.742188 34.09375 12.792969 33.871094 12.9375 C 33.648438 13.082031 33.492188 13.308594 33.441406 13.566406 L 31.070312 24.671875 C 26.617188 24.738281 22.277344 26.105469 18.59375 28.609375 C 17.242188 27.339844 15.273438 26.988281 13.570312 27.707031 C 11.863281 28.429688 10.746094 30.089844 10.71875 31.941406 C 10.691406 33.789062 11.757812 35.484375 13.441406 36.257812 C 13.402344 36.726562 13.402344 37.195312 13.441406 37.664062 C 13.441406 44.832031 21.792969 50.65625 32.097656 50.65625 C 42.398438 50.65625 50.753906 44.832031 50.753906 37.664062 C 50.789062 37.195312 50.789062 36.726562 50.753906 36.257812 C 52.363281 35.453125 53.371094 33.800781 53.34375 32 Z M 21.34375 35.199219 C 21.34375 33.433594 22.777344 32 24.542969 32 C 26.3125 32 27.742188 33.433594 27.742188 35.199219 C 27.742188 36.96875 26.3125 38.398438 24.542969 38.398438 C 22.777344 38.398438 21.34375 36.96875 21.34375 35.199219 Z M 39.9375 44 C 37.664062 45.710938 34.871094 46.582031 32.03125 46.464844 C 29.191406 46.582031 26.398438 45.710938 24.128906 44 C 23.847656 43.65625 23.871094 43.15625 24.183594 42.839844 C 24.5 42.527344 25 42.503906 25.34375 42.785156 C 27.269531 44.195312 29.617188 44.90625 32 44.800781 C 34.386719 44.929688 36.746094 44.242188 38.6875 42.847656 C 39.042969 42.503906 39.605469 42.511719 39.953125 42.863281 C 40.296875 43.21875 40.289062 43.785156 39.9375 44.128906 Z M 39.359375 38.527344 C 37.59375 38.527344 36.160156 37.09375 36.160156 35.328125 C 36.160156 33.5625 37.59375 32.128906 39.359375 32.128906 C 41.128906 32.128906 42.558594 33.5625 42.558594 35.328125 C 42.59375 36.203125 42.269531 37.054688 41.65625 37.6875 C 41.046875 38.316406 40.203125 38.664062 39.328125 38.65625 Z M 39.359375 38.527344"
                fill="white"
              />
            </svg>
          </button>
          <button
            aria-label="email"
            class="react-share__ShareButton"
            style="background-color: transparent; padding: 0px 0.3em 0px 0px; cursor: pointer; margin-bottom: 0.2em;"
          >
            <svg
              height="30"
              viewBox="0 0 64 64"
              width="30"
            >
              <rect
                fill="#7f7f7f"
                height="64"
                rx="0"
                ry="0"
                width="64"
              />
              <path
                d="M17,22v20h30V22H17z M41.1,25L32,32.1L22.9,25H41.1z M20,39V26.6l12,9.3l12-9.3V39H20z"
                fill="white"
              />
            </svg>
          </button>
        </header>
        <article
          class="prose prose-invert lg:prose-lg max-w-none"
        >
          sample blog
        </article>
        <div
          class="hidden md:flex justify-between items-center gap-10 py-10"
        >
          <div
            class="bg-[#3E3355] w-full h-[1px] "
          />
          <div
            class="flex flex-col items-center"
          >
            <p
              class="tab-button-text"
            >
              Share this post
            </p>
            <div
              class="flex items-center gap-4"
            >
              <button
                class="bg-primary px-6 py-3 rounded-[80px] tab-button-text flex items-center gap-3"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 21 20"
                  width="21"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.5 6.66675C16.8807 6.66675 18 5.54746 18 4.16675C18 2.78604 16.8807 1.66675 15.5 1.66675C14.1193 1.66675 13 2.78604 13 4.16675C13 5.54746 14.1193 6.66675 15.5 6.66675Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M5.5 12.5C6.88071 12.5 8 11.3807 8 10C8 8.61929 6.88071 7.5 5.5 7.5C4.11929 7.5 3 8.61929 3 10C3 11.3807 4.11929 12.5 5.5 12.5Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M15.5 18.3335C16.8807 18.3335 18 17.2142 18 15.8335C18 14.4528 16.8807 13.3335 15.5 13.3335C14.1193 13.3335 13 14.4528 13 15.8335C13 17.2142 14.1193 18.3335 15.5 18.3335Z"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M7.65625 11.2583L13.3479 14.575"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M13.3396 5.42505L7.65625 8.74172"
                    stroke="white"
                    stroke-Width="1.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
                Share
              </button>
              <a
                aria-label="Share on FB"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_501_4312)"
                  >
                    <path
                      d="M24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 17.9895 4.3882 22.954 10.125 23.8542V15.4688H7.07812V12H10.125V9.35625C10.125 6.34875 11.9166 4.6875 14.6576 4.6875C15.9701 4.6875 17.3438 4.92188 17.3438 4.92188V7.875H15.8306C14.34 7.875 13.875 8.80008 13.875 9.75V12H17.2031L16.6711 15.4688H13.875V23.8542C19.6118 22.954 24 17.9895 24 12Z"
                      fill="white"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_501_4312"
                    >
                      <rect
                        fill="white"
                        height="24"
                        width="24"
                      />
                    </clippath>
                  </defs>
                </svg>
              </a>
              <a
                aria-label="Share on X"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.3263 1.90381H21.6998L14.3297 10.3273L23 21.7898H16.2112L10.894 14.8378L4.80995 21.7898H1.43443L9.31743 12.7799L1 1.90381H7.96111L12.7674 8.25814L18.3263 1.90381ZM17.1423 19.7706H19.0116L6.94539 3.81694H4.93946L17.1423 19.7706Z"
                    fill="white"
                  />
                </svg>
              </a>
              <a
                aria-label="Share on GitHub"
                href=""
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_501_4316)"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.0099 0C5.36875 0 0 5.40833 0 12.0992C0 17.4475 3.43994 21.9748 8.21205 23.5771C8.80869 23.6976 9.02724 23.3168 9.02724 22.9965C9.02724 22.716 9.00757 21.7545 9.00757 20.7527C5.6667 21.474 4.97099 19.3104 4.97099 19.3104C4.43409 17.9082 3.63858 17.5478 3.63858 17.5478C2.54511 16.8066 3.71823 16.8066 3.71823 16.8066C4.93117 16.8868 5.56763 18.0486 5.56763 18.0486C6.64118 19.8913 8.37111 19.3707 9.06706 19.0501C9.16638 18.2688 9.48473 17.728 9.82275 17.4276C7.15817 17.1471 4.35469 16.1055 4.35469 11.458C4.35469 10.1359 4.8316 9.05428 5.58729 8.21304C5.46807 7.91263 5.0504 6.67043 5.70677 5.00787C5.70677 5.00787 6.72083 4.6873 9.00732 6.24981C9.98625 5.98497 10.9958 5.85024 12.0099 5.84911C13.024 5.84911 14.0577 5.98948 15.0123 6.24981C17.299 4.6873 18.3131 5.00787 18.3131 5.00787C18.9695 6.67043 18.5515 7.91263 18.4323 8.21304C19.2079 9.05428 19.6652 10.1359 19.6652 11.458C19.6652 16.1055 16.8617 17.1269 14.1772 17.4276C14.6148 17.8081 14.9924 18.5292 14.9924 19.6711C14.9924 21.2936 14.9727 22.5957 14.9727 22.9962C14.9727 23.3168 15.1915 23.6976 15.7879 23.5774C20.56 21.9745 23.9999 17.4475 23.9999 12.0992C24.0196 5.40833 18.6312 0 12.0099 0Z"
                      fill="white"
                      fill-rule="evenodd"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0_501_4316"
                    >
                      <rect
                        fill="white"
                        height="24"
                        width="24"
                      />
                    </clippath>
                  </defs>
                </svg>
              </a>
            </div>
          </div>
          <div
            class="bg-[#3E3355] w-full h-[1px] inline-block"
          />
        </div>
      </article>
      <div>
        <ul
          class="flex flex-wrap justify-between list-none p-0"
        >
          <li>
            <a
              href="/blog/next"
              rel="next"
            >
              ← 
              Next
            </a>
          </li>
          <li>
            <a
              href="/blog/previous"
              rel="prev"
            >
              Previous
               →
            </a>
          </li>
        </ul>
      </div>
    </div>
  </section>
  <div
    class="max-w-[1264px] px-6 mx-auto py-8 md:py-16"
  >
    <div
      class="max-w-[670px] mx-auto flex flex-col items-center justify-center"
    >
      <div
        class="text-5xl leading-[116%] text-white text-center font-semibold"
      >
        Related Articles
      </div>
      <div
        class="text-lightgrey mt-6 tab-button-text text-center"
      >
        Eclipse Temurin offers high-performance, cross-platform, open-source Java runtime binaries that are enterprise-ready and Java SE TCK-tested for general use in the Java ecosystem.
      </div>
      <button
        class="rounded-2xl bg-transparent gradient-border mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[160px] h-[48px] block "
      >
        See all articles
      </button>
    </div>
    <div
      class="flex justify-center flex-wrap items-center gap-5 pt-16"
    >
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 1
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 2
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 3
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
      <div
        class="flex flex-col max-w-[392px] newscard-2 bg-[#200D46] p-6"
      >
        <div
          class="relative"
        >
          <img
            alt=""
            class=" mb-0 pb-5"
            src="/images/new-article-card-img.png"
          />
        </div>
        <h2
          class="text-[20px] font-semibold text-white leading-[140%] mb-0 pb-5"
        >
          Mock Title 4
           
        </h2>
        <p
          class="mb-0"
        >
          2021-01-01
        </p>
        <a
          class="py-3 text-base underline font-bold leading-6 text-white mt-4 block border-white w-fit"
        >
          Read More
        </a>
      </div>
    </div>
  </div>
</main>
`;
